# axiom

./: .gitignore  README.md  axiom.cmd  main.py  pyproject.toml  record.cmd  requirements.txt  run_forever.cmd
docs/prompts/: build-signals-module.md
scripts/: projectx_realtime.mjs  research_ic_scan.py  research_overnight_mr.py
src/: bar_features.py  bars.py  candidates.py  config.py  execution.py  features.py  history.py  live_signals.py  normalize.py  pipeline.py  projectx.py  recording.py  retention.py  session.py  signals.py  state_profile.py  walkforward.py
src/axiom/: __init__.py  backtest.py  cli.py  features.py  history.py  normalize.py  pipeline.py  playbook.py  projectx.py  qa.py  recording.py  research.py  session.py  signal_eval.py  signals.py  storage.py
tests/: _bootstrap.py  test_backtest.py  test_bar_features.py  test_bars.py  test_candidates.py  test_cli_finalize.py  test_execution.py  test_features.py  test_history.py  test_live_signals.py  test_normalize.py  test_pipeline_finalize.py  test_playbook.py  test_projectx_time.py  test_projectx_trading.py  test_qa.py  test_research.py  test_retention.py  test_session.py  test_signal_eval.py  test_signals.py  test_state_profile.py  test_walkforward.py
