[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom"
version = "0.1.0"
description = "Data-first MNQ research and trading foundation for Project X."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
research = [
  "duckdb>=1.0",
  "pandas>=2.2",
  "pyarrow>=15",
  "polars>=1.0",
]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[project.scripts]
axiom = "axiom.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

